src/app/main-toolbar/main-toolbar.component.css
#main-toolbar-menu-button:active,
#main-toolbar-menu-button:focus {
  outline: none;
}

#main-toolbar-logo {
  height: 100%;
  width: 80px;
  margin-right: 20px;
}

#main-toolbar-menu-button {
  height: auto;
  width: auto;
  margin-right: 25px;
  margin-left: 15px;
  font-size: 28pt;
  cursor: pointer;
}

#main-toolbar-logout-button {
  vertical-align: top;
  font-size: 12pt;
  display: block;
  font-family: Lato, sans-serif;
  height: 45px;
}

#main-toolbar-logout-button:hover {
  background-color: #c19051;
}

#main-toolbar-sell-button {
  vertical-align:bottom;
  margin-left:20px;
  font-size: 12pt;
  display: block;
  font-family: Lato, sans-serif;
  height: 45px;
}
#main-toolbar-sell-button:hover {
  background-color: #c19051;
}

#main-toolbar-sell-button .mat-icon {
  margin-right: 3px;
  vertical-align: sub;
}

#main-toolbar-sell-button:focus {
  outline:none;
}

app-main-sidenav {
  display: flex;
  flex: 1;
}

